tests/suite/snapshots/suite__case_ugm3.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Separator
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 4
- token: VerbatimTag
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 38
- token: Break
  start:
    line: 0
    column: 38
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 7
- token: MappingValue
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: Scalar
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 14
- token: Break
  start:
    line: 1
    column: 14
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 4
- token: Separator
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 7
- token: MappingValue
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Separator
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: Scalar
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 19
- token: Break
  start:
    line: 2
    column: 19
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: Scalar
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 7
- token: MappingValue
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Separator
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: Anchor
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 10
- token: AnchorName
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 15
- token: Break
  start:
    line: 3
    column: 15
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 4
- token: Scalar
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 9
- token: Separator
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 11
- token: MappingValue
  start:
    line: 4
    column: 11
  end:
    line: 4
    column: 12
- token: Separator
  start:
    line: 4
    column: 12
  end:
    line: 4
    column: 13
- token: Scalar
  start:
    line: 4
    column: 13
  end:
    line: 4
    column: 18
- token: Break
  start:
    line: 4
    column: 18
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 4
- token: Scalar
  start:
    line: 5
    column: 4
  end:
    line: 5
    column: 10
- token: Separator
  start:
    line: 5
    column: 10
  end:
    line: 5
    column: 11
- token: MappingValue
  start:
    line: 5
    column: 11
  end:
    line: 5
    column: 12
- token: Separator
  start:
    line: 5
    column: 12
  end:
    line: 5
    column: 13
- token: Scalar
  start:
    line: 5
    column: 13
  end:
    line: 5
    column: 19
- token: Break
  start:
    line: 5
    column: 19
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 4
- token: Scalar
  start:
    line: 6
    column: 4
  end:
    line: 6
    column: 11
- token: MappingValue
  start:
    line: 6
    column: 11
  end:
    line: 6
    column: 12
- token: Break
  start:
    line: 6
    column: 12
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 8
- token: Scalar
  start:
    line: 7
    column: 8
  end:
    line: 7
    column: 13
- token: MappingValue
  start:
    line: 7
    column: 13
  end:
    line: 7
    column: 14
- token: Separator
  start:
    line: 7
    column: 14
  end:
    line: 7
    column: 15
- token: Literal
  start:
    line: 7
    column: 15
  end:
    line: 7
    column: 16
- token: Break
  start:
    line: 7
    column: 16
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 12
- token: Scalar
  start:
    line: 8
    column: 12
  end:
    line: 8
    column: 27
- token: ScalarBreak
  start:
    line: 8
    column: 27
  end:
    line: 9
    column: 0
- token: Indent
  start:
    line: 9
    column: 0
  end:
    line: 9
    column: 12
- token: Scalar
  start:
    line: 9
    column: 12
  end:
    line: 9
    column: 22
- token: ScalarBreak
  start:
    line: 9
    column: 22
  end:
    line: 10
    column: 0
- token: Indent
  start:
    line: 10
    column: 0
  end:
    line: 10
    column: 8
- token: Scalar
  start:
    line: 10
    column: 8
  end:
    line: 10
    column: 12
- token: Separator
  start:
    line: 10
    column: 12
  end:
    line: 10
    column: 16
- token: MappingValue
  start:
    line: 10
    column: 16
  end:
    line: 10
    column: 17
- token: Separator
  start:
    line: 10
    column: 17
  end:
    line: 10
    column: 18
- token: Scalar
  start:
    line: 10
    column: 18
  end:
    line: 10
    column: 27
- token: Break
  start:
    line: 10
    column: 27
  end:
    line: 11
    column: 0
- token: Indent
  start:
    line: 11
    column: 0
  end:
    line: 11
    column: 8
- token: Scalar
  start:
    line: 11
    column: 8
  end:
    line: 11
    column: 13
- token: Separator
  start:
    line: 11
    column: 13
  end:
    line: 11
    column: 16
- token: MappingValue
  start:
    line: 11
    column: 16
  end:
    line: 11
    column: 17
- token: Separator
  start:
    line: 11
    column: 17
  end:
    line: 11
    column: 18
- token: Scalar
  start:
    line: 11
    column: 18
  end:
    line: 11
    column: 20
- token: Break
  start:
    line: 11
    column: 20
  end:
    line: 12
    column: 0
- token: Indent
  start:
    line: 12
    column: 0
  end:
    line: 12
    column: 8
- token: Scalar
  start:
    line: 12
    column: 8
  end:
    line: 12
    column: 14
- token: Separator
  start:
    line: 12
    column: 14
  end:
    line: 12
    column: 16
- token: MappingValue
  start:
    line: 12
    column: 16
  end:
    line: 12
    column: 17
- token: Separator
  start:
    line: 12
    column: 17
  end:
    line: 12
    column: 18
- token: Scalar
  start:
    line: 12
    column: 18
  end:
    line: 12
    column: 23
- token: Break
  start:
    line: 12
    column: 23
  end:
    line: 13
    column: 0
- token: Indent
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 0
- token: Scalar
  start:
    line: 13
    column: 0
  end:
    line: 13
    column: 7
- token: MappingValue
  start:
    line: 13
    column: 7
  end:
    line: 13
    column: 8
- token: Separator
  start:
    line: 13
    column: 8
  end:
    line: 13
    column: 9
- token: Alias
  start:
    line: 13
    column: 9
  end:
    line: 13
    column: 10
- token: AnchorName
  start:
    line: 13
    column: 10
  end:
    line: 13
    column: 15
- token: Break
  start:
    line: 13
    column: 15
  end:
    line: 14
    column: 0
- token: Indent
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 0
- token: Scalar
  start:
    line: 14
    column: 0
  end:
    line: 14
    column: 7
- token: MappingValue
  start:
    line: 14
    column: 7
  end:
    line: 14
    column: 8
- token: Break
  start:
    line: 14
    column: 8
  end:
    line: 15
    column: 0
- token: Indent
  start:
    line: 15
    column: 0
  end:
    line: 15
    column: 4
- token: SequenceEntry
  start:
    line: 15
    column: 4
  end:
    line: 15
    column: 5
- token: Indent
  start:
    line: 15
    column: 5
  end:
    line: 15
    column: 6
- token: Scalar
  start:
    line: 15
    column: 6
  end:
    line: 15
    column: 9
- token: Separator
  start:
    line: 15
    column: 9
  end:
    line: 15
    column: 18
- token: MappingValue
  start:
    line: 15
    column: 18
  end:
    line: 15
    column: 19
- token: Separator
  start:
    line: 15
    column: 19
  end:
    line: 15
    column: 20
- token: Scalar
  start:
    line: 15
    column: 20
  end:
    line: 15
    column: 26
- token: Break
  start:
    line: 15
    column: 26
  end:
    line: 16
    column: 0
- token: Indent
  start:
    line: 16
    column: 0
  end:
    line: 16
    column: 6
- token: Scalar
  start:
    line: 16
    column: 6
  end:
    line: 16
    column: 14
- token: Separator
  start:
    line: 16
    column: 14
  end:
    line: 16
    column: 18
- token: MappingValue
  start:
    line: 16
    column: 18
  end:
    line: 16
    column: 19
- token: Separator
  start:
    line: 16
    column: 19
  end:
    line: 16
    column: 20
- token: Scalar
  start:
    line: 16
    column: 20
  end:
    line: 16
    column: 21
- token: Break
  start:
    line: 16
    column: 21
  end:
    line: 17
    column: 0
- token: Indent
  start:
    line: 17
    column: 0
  end:
    line: 17
    column: 6
- token: Scalar
  start:
    line: 17
    column: 6
  end:
    line: 17
    column: 17
- token: Separator
  start:
    line: 17
    column: 17
  end:
    line: 17
    column: 18
- token: MappingValue
  start:
    line: 17
    column: 18
  end:
    line: 17
    column: 19
- token: Separator
  start:
    line: 17
    column: 19
  end:
    line: 17
    column: 20
- token: Scalar
  start:
    line: 17
    column: 20
  end:
    line: 17
    column: 30
- token: Break
  start:
    line: 17
    column: 30
  end:
    line: 18
    column: 0
- token: Indent
  start:
    line: 18
    column: 0
  end:
    line: 18
    column: 6
- token: Scalar
  start:
    line: 18
    column: 6
  end:
    line: 18
    column: 11
- token: Separator
  start:
    line: 18
    column: 11
  end:
    line: 18
    column: 18
- token: MappingValue
  start:
    line: 18
    column: 18
  end:
    line: 18
    column: 19
- token: Separator
  start:
    line: 18
    column: 19
  end:
    line: 18
    column: 20
- token: Scalar
  start:
    line: 18
    column: 20
  end:
    line: 18
    column: 26
- token: Break
  start:
    line: 18
    column: 26
  end:
    line: 19
    column: 0
- token: Indent
  start:
    line: 19
    column: 0
  end:
    line: 19
    column: 4
- token: SequenceEntry
  start:
    line: 19
    column: 4
  end:
    line: 19
    column: 5
- token: Indent
  start:
    line: 19
    column: 5
  end:
    line: 19
    column: 6
- token: Scalar
  start:
    line: 19
    column: 6
  end:
    line: 19
    column: 9
- token: Separator
  start:
    line: 19
    column: 9
  end:
    line: 19
    column: 18
- token: MappingValue
  start:
    line: 19
    column: 18
  end:
    line: 19
    column: 19
- token: Separator
  start:
    line: 19
    column: 19
  end:
    line: 19
    column: 20
- token: Scalar
  start:
    line: 19
    column: 20
  end:
    line: 19
    column: 27
- token: Break
  start:
    line: 19
    column: 27
  end:
    line: 20
    column: 0
- token: Indent
  start:
    line: 20
    column: 0
  end:
    line: 20
    column: 6
- token: Scalar
  start:
    line: 20
    column: 6
  end:
    line: 20
    column: 14
- token: Separator
  start:
    line: 20
    column: 14
  end:
    line: 20
    column: 18
- token: MappingValue
  start:
    line: 20
    column: 18
  end:
    line: 20
    column: 19
- token: Separator
  start:
    line: 20
    column: 19
  end:
    line: 20
    column: 20
- token: Scalar
  start:
    line: 20
    column: 20
  end:
    line: 20
    column: 21
- token: Break
  start:
    line: 20
    column: 21
  end:
    line: 21
    column: 0
- token: Indent
  start:
    line: 21
    column: 0
  end:
    line: 21
    column: 6
- token: Scalar
  start:
    line: 21
    column: 6
  end:
    line: 21
    column: 17
- token: Separator
  start:
    line: 21
    column: 17
  end:
    line: 21
    column: 18
- token: MappingValue
  start:
    line: 21
    column: 18
  end:
    line: 21
    column: 19
- token: Separator
  start:
    line: 21
    column: 19
  end:
    line: 21
    column: 20
- token: Scalar
  start:
    line: 21
    column: 20
  end:
    line: 21
    column: 30
- token: Break
  start:
    line: 21
    column: 30
  end:
    line: 22
    column: 0
- token: Indent
  start:
    line: 22
    column: 0
  end:
    line: 22
    column: 6
- token: Scalar
  start:
    line: 22
    column: 6
  end:
    line: 22
    column: 11
- token: Separator
  start:
    line: 22
    column: 11
  end:
    line: 22
    column: 18
- token: MappingValue
  start:
    line: 22
    column: 18
  end:
    line: 22
    column: 19
- token: Separator
  start:
    line: 22
    column: 19
  end:
    line: 22
    column: 20
- token: Scalar
  start:
    line: 22
    column: 20
  end:
    line: 22
    column: 27
- token: Break
  start:
    line: 22
    column: 27
  end:
    line: 23
    column: 0
- token: Indent
  start:
    line: 23
    column: 0
  end:
    line: 23
    column: 0
- token: Scalar
  start:
    line: 23
    column: 0
  end:
    line: 23
    column: 3
- token: Separator
  start:
    line: 23
    column: 3
  end:
    line: 23
    column: 5
- token: MappingValue
  start:
    line: 23
    column: 5
  end:
    line: 23
    column: 6
- token: Separator
  start:
    line: 23
    column: 6
  end:
    line: 23
    column: 7
- token: Scalar
  start:
    line: 23
    column: 7
  end:
    line: 23
    column: 13
- token: Break
  start:
    line: 23
    column: 13
  end:
    line: 24
    column: 0
- token: Indent
  start:
    line: 24
    column: 0
  end:
    line: 24
    column: 0
- token: Scalar
  start:
    line: 24
    column: 0
  end:
    line: 24
    column: 5
- token: MappingValue
  start:
    line: 24
    column: 5
  end:
    line: 24
    column: 6
- token: Separator
  start:
    line: 24
    column: 6
  end:
    line: 24
    column: 7
- token: Scalar
  start:
    line: 24
    column: 7
  end:
    line: 24
    column: 14
- token: Break
  start:
    line: 24
    column: 14
  end:
    line: 25
    column: 0
- token: Indent
  start:
    line: 25
    column: 0
  end:
    line: 25
    column: 0
- token: Scalar
  start:
    line: 25
    column: 0
  end:
    line: 25
    column: 8
- token: MappingValue
  start:
    line: 25
    column: 8
  end:
    line: 25
    column: 9
- token: Break
  start:
    line: 25
    column: 9
  end:
    line: 26
    column: 0
- token: Indent
  start:
    line: 26
    column: 0
  end:
    line: 26
    column: 1
- token: Separator
  start:
    line: 26
    column: 1
  end:
    line: 26
    column: 4
- token: Scalar
  start:
    line: 26
    column: 4
  end:
    line: 26
    column: 27
- token: ScalarSpace
  start:
    line: 26
    column: 27
  end:
    line: 27
    column: 0
- token: Indent
  start:
    line: 27
    column: 0
  end:
    line: 27
    column: 1
- token: Separator
  start:
    line: 27
    column: 1
  end:
    line: 27
    column: 4
- token: Scalar
  start:
    line: 27
    column: 4
  end:
    line: 27
    column: 27
- token: ScalarSpace
  start:
    line: 27
    column: 27
  end:
    line: 28
    column: 0
- token: Indent
  start:
    line: 28
    column: 0
  end:
    line: 28
    column: 1
- token: Separator
  start:
    line: 28
    column: 1
  end:
    line: 28
    column: 4
- token: Scalar
  start:
    line: 28
    column: 4
  end:
    line: 28
    column: 24
- token: Break
  start:
    line: 28
    column: 24
  end:
    line: 29
    column: 0

