tests/suite/snapshots/suite__case_ukk6_00.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Indent
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Empty
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 2
- token: MappingValue
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: Empty
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0

