tests/suite/snapshots/suite__case_ukk6_02.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: NonSpecificTag
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Empty
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0

