tests/suite/snapshots/suite__case_ut92.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: MappingStart
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Separator
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Scalar
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 14
    line: 1
    column: 9
- token: ScalarSpace
  start:
    index: 14
    line: 1
    column: 9
  end:
    index: 16
    line: 2
    column: 0
- token: Indent
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 16
    line: 2
    column: 0
- token: Scalar
  start:
    index: 16
    line: 2
    column: 0
  end:
    index: 17
    line: 2
    column: 1
- token: Separator
  start:
    index: 17
    line: 2
    column: 1
  end:
    index: 18
    line: 2
    column: 2
- token: MappingValue
  start:
    index: 18
    line: 2
    column: 2
  end:
    index: 19
    line: 2
    column: 3
- token: Separator
  start:
    index: 19
    line: 2
    column: 3
  end:
    index: 20
    line: 2
    column: 4
- token: Scalar
  start:
    index: 20
    line: 2
    column: 4
  end:
    index: 22
    line: 2
    column: 6
- token: Separator
  start:
    index: 22
    line: 2
    column: 6
  end:
    index: 23
    line: 2
    column: 7
- token: MappingEnd
  start:
    index: 23
    line: 2
    column: 7
  end:
    index: 24
    line: 2
    column: 8
- token: Break
  start:
    index: 24
    line: 2
    column: 8
  end:
    index: 26
    line: 3
    column: 0
- token: DocumentEnd
  start:
    index: 26
    line: 3
    column: 0
  end:
    index: 29
    line: 3
    column: 3
- token: Break
  start:
    index: 29
    line: 3
    column: 3
  end:
    index: 31
    line: 4
    column: 0
- token: DirectivesEnd
  start:
    index: 31
    line: 4
    column: 0
  end:
    index: 34
    line: 4
    column: 3
- token: Empty
  start:
    index: 34
    line: 4
    column: 3
  end:
    index: 34
    line: 4
    column: 3
- token: Break
  start:
    index: 34
    line: 4
    column: 3
  end:
    index: 36
    line: 5
    column: 0
- token: Comment
  start:
    index: 36
    line: 5
    column: 0
  end:
    index: 37
    line: 5
    column: 1
- token: CommentText
  start:
    index: 37
    line: 5
    column: 1
  end:
    index: 43
    line: 5
    column: 7
- token: Break
  start:
    index: 43
    line: 5
    column: 7
  end:
    index: 45
    line: 6
    column: 0
- token: DocumentEnd
  start:
    index: 45
    line: 6
    column: 0
  end:
    index: 48
    line: 6
    column: 3
- token: Break
  start:
    index: 48
    line: 6
    column: 3
  end:
    index: 50
    line: 7
    column: 0

