tests/suite/snapshots/suite__case_uv7q.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 0
    line: 0
    column: 0
- token: Scalar
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: MappingValue
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: Break
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 4
    line: 1
    column: 0
- token: Indent
  start:
    index: 4
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 1
- token: SequenceEntry
  start:
    index: 5
    line: 1
    column: 1
  end:
    index: 6
    line: 1
    column: 2
- token: Separator
  start:
    index: 6
    line: 1
    column: 2
  end:
    index: 7
    line: 1
    column: 3
- token: Scalar
  start:
    index: 7
    line: 1
    column: 3
  end:
    index: 8
    line: 1
    column: 4
- token: ScalarSpace
  start:
    index: 8
    line: 1
    column: 4
  end:
    index: 10
    line: 2
    column: 0
- token: Indent
  start:
    index: 10
    line: 2
    column: 0
  end:
    index: 12
    line: 2
    column: 2
- token: Separator
  start:
    index: 12
    line: 2
    column: 2
  end:
    index: 13
    line: 2
    column: 3
- token: Scalar
  start:
    index: 13
    line: 2
    column: 3
  end:
    index: 14
    line: 2
    column: 4
- token: Break
  start:
    index: 14
    line: 2
    column: 4
  end:
    index: 16
    line: 3
    column: 0

