tests/suite/snapshots/suite__case_w42u.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Empty
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: Comment
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 3
- token: CommentText
  start:
    line: 0
    column: 3
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Separator
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Literal
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Break
  start:
    line: 1
    column: 3
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 1
- token: Scalar
  start:
    line: 2
    column: 1
  end:
    line: 2
    column: 11
- token: ScalarBreak
  start:
    line: 2
    column: 11
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: SequenceEntry
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Indent
  start:
    line: 3
    column: 1
  end:
    line: 3
    column: 2
- token: SequenceEntry
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: Separator
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: Scalar
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 7
- token: Separator
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 8
- token: Comment
  start:
    line: 3
    column: 8
  end:
    line: 3
    column: 9
- token: CommentText
  start:
    line: 3
    column: 9
  end:
    line: 3
    column: 17
- token: Break
  start:
    line: 3
    column: 17
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 2
- token: SequenceEntry
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Separator
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: Scalar
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: Comment
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: CommentText
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 18
- token: Break
  start:
    line: 4
    column: 18
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: SequenceEntry
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 1
- token: Indent
  start:
    line: 5
    column: 1
  end:
    line: 5
    column: 2
- token: Scalar
  start:
    line: 5
    column: 2
  end:
    line: 5
    column: 5
- token: MappingValue
  start:
    line: 5
    column: 5
  end:
    line: 5
    column: 6
- token: Separator
  start:
    line: 5
    column: 6
  end:
    line: 5
    column: 7
- token: Scalar
  start:
    line: 5
    column: 7
  end:
    line: 5
    column: 10
- token: Separator
  start:
    line: 5
    column: 10
  end:
    line: 5
    column: 11
- token: Comment
  start:
    line: 5
    column: 11
  end:
    line: 5
    column: 12
- token: CommentText
  start:
    line: 5
    column: 12
  end:
    line: 5
    column: 28
- token: Break
  start:
    line: 5
    column: 28
  end:
    line: 6
    column: 0

