tests/suite/snapshots/suite__case_w4tn.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Directive
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: DirectiveName
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 5
- token: Separator
  start:
    line: 0
    column: 5
  end:
    line: 0
    column: 6
- token: YamlVersion
  start:
    line: 0
    column: 6
  end:
    line: 0
    column: 9
- token: Break
  start:
    line: 0
    column: 9
  end:
    line: 1
    column: 0
- token: DirectivesEnd
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Literal
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: Break
  start:
    line: 1
    column: 5
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 14
- token: ScalarBreak
  start:
    line: 2
    column: 14
  end:
    line: 3
    column: 0
- token: DocumentEnd
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 3
- token: Break
  start:
    line: 3
    column: 3
  end:
    line: 4
    column: 0
- token: Directive
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: DirectiveName
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 5
- token: Separator
  start:
    line: 4
    column: 5
  end:
    line: 4
    column: 6
- token: YamlVersion
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 9
- token: Break
  start:
    line: 4
    column: 9
  end:
    line: 5
    column: 0
- token: DirectivesEnd
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 3
- token: Empty
  start:
    line: 5
    column: 3
  end:
    line: 5
    column: 3
- token: Break
  start:
    line: 5
    column: 3
  end:
    line: 6
    column: 0
- token: Comment
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 1
- token: CommentText
  start:
    line: 6
    column: 1
  end:
    line: 6
    column: 7
- token: Break
  start:
    line: 6
    column: 7
  end:
    line: 7
    column: 0
- token: DocumentEnd
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 3
- token: Break
  start:
    line: 7
    column: 3
  end:
    line: 8
    column: 0

